k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookbook-api
  namespace: cookbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cookbook-api
  template:
    metadata:
      labels:
        app: cookbook-api
    spec:
      containers:
        - name: cookbook-api
          image: benhyer/cookbook-api:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /alive
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
