k8s/loki-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: cookbook
spec:
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:latest
          args: ["-config.file=/etc/loki/local-config.yaml"]
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-storage
              mountPath: /loki
      volumes:
        - name: loki-storage
          persistentVolumeClaim:
            claimName: loki-pvc
