k8s/otel-collector-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: cookbook
spec:
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:latest
          args: ["--config=/etc/otel/otel-config.yml"]
          ports:
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 8889
            - containerPort: 13133
          # Probes (readiness/liveness)
          readinessProbe:
            httpGet:
              path: /
              port: 13133
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 13133
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: otel-config
              mountPath: /etc/otel
      volumes:
        - name: otel-config
          configMap:
            name: otel-collector-config
