k8s/blackbox-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox
  namespace: cookbook
spec:
  selector:
    app: blackbox
  ports:
    - protocol: TCP
      port: 9115
      targetPort: 9115
  type: ClusterIP
