k8s/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: cookbook
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
