k8s/loki-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: cookbook
spec:
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
