k8s/otel-collector-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: cookbook
spec:
  selector:
    app: otel-collector
  ports:
    - name: grpc
      port: 4317
      targetPort: 4317
    - name: http
      port: 4318
      targetPort: 4318
    - name: prometheus
      port: 8889
      targetPort: 8889
