k8s/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: cookbook
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
