k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cookbook-web
  namespace: cookbook
spec:
  selector:
    app: cookbook-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
