k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cookbook-ingress
  namespace: cookbook
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: cookbook.bencampus.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cookbook-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cookbook-web
                port:
                  number: 80
